--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         class="grid container gap-2 mt-20 mx-auto  lg:grid-cols-3 md:grid-cols-2 grid-cols-1 ">
       </div>
     </main>
-    <div id="error-handel"></div>
+    <div id="error-handle"></div>
 
     <!-- script -->
     <script src="./index.js"></script>
